# distortion-rs

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: README.md
distortionlib/: CMakeLists.txt  Cargo.toml  cbindgen.toml  distortion.h
distortionlib/src/: distortion.rs  filter.rs  gain.rs  lib.rs  utils.rs  waveshape.rs
src/: CMakeLists.txt  ChowDistortionPlugin.cpp  ChowDistortionPlugin.h
