[package]
name = "distortionlib"
version = "0.1.0"
authors = ["jatinchowdhury18 <jatinchowdhury18@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1"

[lib]
crate-type = ["staticlib"]
